# doom-vst

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  pages.yml
.myrobots/: ci_plan
config/: default_killroom.yaml
docs/: index.html
examples/: e1m1_demo.mid
libs/doom_renderer/: CMakeLists.txt
libs/doom_renderer/doom_src/: r_data.c  r_draw.c  r_sky.c  r_things.c  w_wad.c
libs/doom_renderer/include/: doom_renderer.h  windows_compat.h
libs/doom_renderer/src/: d_net_stub.c  doom_renderer.c  game_stubs.c  i_sound_stub.c  i_system_stub.c  i_video_stub.c
resources/sets/: default.dvset
scripts/: build_default_sample_set.py  build_e1m1_demo_midi.py  extract_doom_sounds.py
src/: ControlWindow.cpp  ControlWindow.h  DoomViewport.cpp  DoomViewport.h  MacFullscreen.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  BandAnalyzer.cpp  BandAnalyzer.h  MidiHandler.cpp  MidiHandler.h  PitchEngine.h  SamplerEngine.cpp  SamplerEngine.h  SignalBus.cpp  SignalBus.h  VarispeedEngine.cpp  VarispeedEngine.h
src/doom/: DoomEngine.cpp  DoomEngine.h
src/patch/: BandRowsSection.cpp  BandRowsSection.h  PadCell.cpp  PadCell.h  PatchSettings.h  PatchSettingsStore.cpp  PatchSettingsStore.h  PatchWindow.cpp  PatchWindow.h  PlaceholderPatchPanel.cpp  PlaceholderPatchPanel.h  PlaceholderSection.cpp  PlaceholderSection.h  SampleResample.cpp  SampleResample.h  SampleSetIO.cpp  SampleSetIO.h  SamplerPanel.cpp  SamplerPanel.h  SpectrumPatchPanel.cpp  SpectrumPatchPanel.h  SpectrumSection.cpp  SpectrumSection.h  SpriteCatalog.h  VisualizerState.cpp  VisualizerState.h  WaveformView.cpp  WaveformView.h
src/routing/: RouteConfig.cpp  RouteConfig.h  SignalRouter.cpp  SignalRouter.h
src/scenes/: AnalyzerRoomScene.cpp  AnalyzerRoomScene.h  KillRoomScene.cpp  KillRoomScene.h  Scene.h  SceneManager.cpp  SceneManager.h  Spectrum2Scene.cpp  Spectrum2Scene.h  SpriteSpectrumScene.cpp  SpriteSpectrumScene.h
test/: render_test.c  test_render_baseline.sh
test/audio/: README.md
test/baselines/: e1m1_test.ppm  e1m1_with_imp.ppm
test/integration/: processor_test_stub.cpp  test_processor_midi.cpp  test_processor_pass_through.cpp  test_processor_state.cpp  test_sampler_audio.cpp  test_state_persistence.cpp
test/unit/: test_audio_analyzer.cpp  test_midi_handler.cpp  test_patch_settings_store.cpp  test_route_config.cpp  test_sample_set_io.cpp  test_sampler_engine.cpp  test_signal_bus.cpp  test_signal_router.cpp  test_sprite_catalog.cpp  test_varispeed_engine.cpp  test_visualizer_state.cpp
test/vrt/: build_gallery.py  run_vrt.py  vrt_runner.cpp
test/vrt/baselines/analyzer/: frame_0000.ppm  frame_0001.ppm  frame_0002.ppm  frame_0003.ppm  frame_0004.ppm  frame_0005.ppm  frame_0006.ppm  frame_0007.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0018.ppm  frame_0019.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0023.ppm  frame_0024.ppm  frame_0025.ppm  frame_0026.ppm  frame_0027.ppm  frame_0028.ppm  frame_0029.ppm  frame_0030.ppm  frame_0031.ppm  frame_0032.ppm  frame_0033.ppm  frame_0034.ppm  frame_0035.ppm  frame_0036.ppm  frame_0037.ppm  frame_0038.ppm  frame_0039.ppm  (+1 more)
test/vrt/baselines/killroom/: frame_0000.ppm  frame_0001.ppm  frame_0002.ppm  frame_0003.ppm  frame_0004.ppm  frame_0005.ppm  frame_0006.ppm  frame_0007.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0018.ppm  frame_0019.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0023.ppm  frame_0024.ppm  frame_0025.ppm  frame_0026.ppm  frame_0027.ppm  frame_0028.ppm  frame_0029.ppm  frame_0030.ppm  frame_0031.ppm  frame_0032.ppm  frame_0033.ppm  frame_0034.ppm  frame_0035.ppm  frame_0036.ppm  frame_0037.ppm  frame_0038.ppm  frame_0039.ppm  (+1 more)
test/vrt/baselines/spectrum2/: frame_0000.ppm  frame_0001.ppm  frame_0002.ppm  frame_0003.ppm  frame_0004.ppm  frame_0005.ppm  frame_0006.ppm  frame_0007.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0018.ppm  frame_0019.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0023.ppm  frame_0024.ppm  frame_0025.ppm  frame_0026.ppm  frame_0027.ppm  frame_0028.ppm  frame_0029.ppm  frame_0030.ppm  frame_0031.ppm  frame_0032.ppm  frame_0033.ppm  frame_0034.ppm  frame_0035.ppm  frame_0036.ppm  frame_0037.ppm  frame_0038.ppm  frame_0039.ppm  (+1 more)
